# diagrams-for-ai

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.cursor/rules/: ia-diagrams-project.mdc
.cursor/skills/feature-dev-workflow/: SKILL.md
.github/workflows/: ci.yml  publish.yml
docs/: api.md  clusters.md  connection-styles.md  icons.md  index.md  mermaid-import.md  quickstart.md
docs/examples/: aws_web_service.mmd  aws_web_service.py
src/diagrams_for_ai/: __init__.py  icons.py  layout.py  model.py  paths.py  renderer_png.py  renderer_svg.py
src/diagrams_for_ai/ext/mermaid/: __init__.py  parser.py
tests/: test_icons.py  test_layout.py  test_mermaid_parser.py  test_paths.py  test_rendering.py
